deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: onuromertunc/payment
          imagePullPolicy: Always
          command: ["node"]
          args: ["./index.js"]
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: payment
spec:
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 3000
  type: LoadBalancer
