service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-payment-app
  namespace: payment
spec:
  selector:
    app: demo-payment-app
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000
    nodePort: 30080
