ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: payment
  name: payment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - payment.com
    secretName: payment.com
  ingressClassName: nginx
  rules:
  - host: payment.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: payment
            port:
              number: 80
